--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#Igonre connection string file
+Connection/ConnectionString.cs
+
 # User-specific files
 *.rsuser
 *.suo
@@ -347,3 +350,5 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+ToolshopApp2/Connection/ConnectionString.cs
