--- a/ToolshopApp2/ToolshopApp2.csproj
+++ b/ToolshopApp2/ToolshopApp2.csproj
@@ -81,6 +81,9 @@
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
+      <HintPath>..\packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -307,6 +310,12 @@
     <Compile Include="View\UserControlers\MainWindowControllers\CalendarViewUserControl.xaml.cs">
       <DependentUpon>CalendarViewUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\UserControlers\MainWindowControllers\SpinnerUserControl.xaml.cs">
+      <DependentUpon>SpinnerUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UserControlers\MainWindowControllers\UserDataUserControl.xaml.cs">
+      <DependentUpon>UserDataUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\UserControlers\TaskWindowControllers\CommentsUserControl.xaml.cs">
       <DependentUpon>CommentsUserControl.xaml</DependentUpon>
     </Compile>
@@ -358,6 +367,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\UserControlers\MainWindowControllers\CalendarViewUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UserControlers\MainWindowControllers\SpinnerUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UserControlers\MainWindowControllers\UserDataUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
